
-------------------------------------------------------------------------------

Thu Sep 30 16:59:57 PDT 1999
(Raster)

handle file menus beign deleted form disk and delete them from the menu 
heirachy too

-------------------------------------------------------------------------------

Thu Sep 30 17:26:38 PDT 1999
(Raster)

try nto to segv if filemnus go missing... :)

-------------------------------------------------------------------------------

Thu Sep 30 18:54:13 PDT 1999
(Raster)

added pager group move patch and windowmatces pact for dialogs...

-------------------------------------------------------------------------------

Thu Sep 30 19:28:13 PDT 1999
(Raster)

add some mroe window matched to brushed metal to accoutn for dialogs
and have the dialog code and ewin match function work better...

-------------------------------------------------------------------------------

Thu Sep 30 20:43:54 PDT 1999
(Mandrake)

fixed a warning caused in borders.c due to lack of a cast

-------------------------------------------------------------------------------

Thu Sep 30 22:36:37 PDT 1999
(Mandrake)

added KDE Support config dialog


-------------------------------------------------------------------------------

Thu Sep 30 23:05:53 PDT 1999
(Mandrake)

updated TODO - removed two items, added one

-------------------------------------------------------------------------------

Thu Sep 30 23:07:48 PDT 1999
(Raster)

flim! :)

-------------------------------------------------------------------------------

Fri Oct  1 01:16:46 PDT 1999
(Raster)

fix windowmatch border sige-effect for starting the firts time

fix start/restart/logout on multihead 

-------------------------------------------------------------------------------

Fri Oct  1 01:32:30 PDT 1999
(Raster)

add bug i noticed to TODO

-------------------------------------------------------------------------------

Fri Oct  1 10:50:59 PDT 1999
(Raster)

fixed minor pager sel windo resize problem...