@@ -2622,3 +2622,11 @@ Fri Oct  1 10:50:59 PDT 1999
 (Raster)
 
 fixed minor pager sel windo resize problem...
+
+-------------------------------------------------------------------------------
+
+Fri Oct  1 11:08:10 PDT 1999
+(Mandrake)
+
+fixed the bug where remembering any state BESIDES location on a dialog window
+would cause it to pop up at -20, -20
